Página de visualização de vídeos

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # Tab indentation (no size specified)
-[*.{js,tag}]
+[*.{js,tag, html}]
 charset = utf-8
 indent_style = space
 indent_size = 3
